lagt in validering och stylat lite

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,3 +63,9 @@ input {
 label {
     font-weight: bold;  
 }
+
+/*errorDivs*/
+#errorDivReg, #errorDivLogin {
+    font-weight: bolder;
+    color: orangered;
+}
