--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,10 +15,12 @@ main {
 button {
     padding: 10px; 
     margin-top: 1em; 
-    background-color: rgb(0, 56, 0);
+    background-color: rgb(0, 110, 0);
     color: white; 
     font-weight:bold; 
     border-radius: 4px; 
+    cursor: pointer;
+    border: 1px solid #084400; 
 } 
 
 /*nav*/
